--- a/manifest.json
+++ b/manifest.json
@@ -10,8 +10,7 @@
           "js": ["content.js"]
         }],
         "browser_action": {
-          "default_icon": "img/jooble.png",
-          "default_popup": "popup.html"
+          "default_icon": "img/jooble.png"
         }
         
   }
